--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -54,12 +54,24 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="Terraria">
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\terraria\Terraria.exe</HintPath>
+      <HintPath>..\..\My Games\Terraria\ModLoader\Mod Sources\PostMod\Terraria.exe</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Buffs\" />
+    <Folder Include="Items\Materials\" />
+    <Folder Include="Items\Placeable\" />
+    <Folder Include="Items\Weapons\Magic\" />
+    <Folder Include="Items\Weapons\Melee\" />
+    <Folder Include="Items\Weapons\Ranged\" />
+    <Folder Include="Items\Weapons\Summon\" />
+    <Folder Include="Items\Weapons\Thrown\" />
+    <Folder Include="NPCs\" />
+    <Folder Include="Tiles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-   <PostBuildEvent>"C:\Program Files (x86)\Steam\steamapps\common\terraria\Terraria.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
+    <PostBuildEvent>C:\Program Files (x86)\Steam\steamapps\common\Terraria\tModLoaderServer.exe" -build "$(ProjectDir)\
+-eac "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
-
