--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -67,6 +67,7 @@
     <Folder Include="Items\Weapons\Summon\" />
     <Folder Include="Items\Weapons\Thrown\" />
     <Folder Include="NPCs\" />
+    <Folder Include="Projectiles\" />
     <Folder Include="Tiles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
