--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="Buffs\RetributionBuff.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Items\Consumables\FuseglassBag.cs" />
     <Compile Include="Items\Consumables\RetributionPotion.cs" />
     <Compile Include="Items\LacunaBlossom.cs" />
     <Compile Include="Items\Materials\FusedBottle.cs" />
@@ -42,10 +43,12 @@
     <Compile Include="Items\Materials\Fuseglass.cs" />
     <Compile Include="Items\Materials\QuickMaterial.cs" />
     <Compile Include="Items\Tools\FusedHammer.cs" />
-    <Compile Include="Items\Tools\FusedPickaxe.cs" />
     <Compile Include="Items\Tools\FusedPickaxeAxe.cs" />
     <Compile Include="Items\Tools\QuickTool.cs" />
+    <Compile Include="Items\Weapons\Magic\FusedMagSword.cs" />
+    <Compile Include="Items\Weapons\Melee\FusedFlail.cs" />
     <Compile Include="Items\Weapons\Melee\FusedSword.cs" />
+    <Compile Include="Items\Weapons\Ranged\FusedXbow.cs" />
     <Compile Include="LacunaMod.cs" />
     <Compile Include="LCPlr.cs" />
     <Compile Include="LGlbItm.cs" />
@@ -54,6 +57,7 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="Projectiles\FusedFlailBall.cs" />
     <Compile Include="QuickRecipe.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,11 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Items\Placeable\" />
-    <Folder Include="Items\Weapons\Magic\" />
-    <Folder Include="Items\Weapons\Ranged\" />
     <Folder Include="Items\Weapons\Summon\" />
     <Folder Include="Items\Weapons\Thrown\" />
-    <Folder Include="Projectiles\" />
     <Folder Include="Tiles\" />
   </ItemGroup>
   <ItemGroup>
