--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -39,9 +39,9 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Items\Accessories\EnchantedThorn.cs" />
     <Compile Include="Items\Accessories\GlassShell.cs" />
-    <Compile Include="Items\Armor\GlassChestplate.cs" />
-    <Compile Include="Items\Armor\GlassHelmet.cs" />
-    <Compile Include="Items\Armor\GlassLeggings.cs" />
+    <Compile Include="Items\Armor\Fuseglass\GlassChestplate.cs" />
+    <Compile Include="Items\Armor\Fuseglass\GlassHelmet.cs" />
+    <Compile Include="Items\Armor\Fuseglass\GlassLeggings.cs" />
     <Compile Include="Items\Consumables\FuseglassBag.cs" />
     <Compile Include="Items\Consumables\RetributionPotion.cs" />
     <Compile Include="Items\Materials\LacunaBlossom.cs" />
@@ -117,14 +117,14 @@
     <Content Include="description.txt" />
     <Content Include="Dusts\Glass_Dust.png" />
     <Content Include="Dusts\Necro_Dust.png" />
-    <Content Include="Items\Armor\GlassChestplate.png" />
-    <Content Include="Items\Armor\GlassChestplate_Arms.png" />
-    <Content Include="Items\Armor\GlassChestplate_Body.png" />
-    <Content Include="Items\Armor\GlassChestplate_FemaleBody.png" />
-    <Content Include="Items\Armor\GlassHelmet.png" />
-    <Content Include="Items\Armor\GlassHelmet_Head.png" />
-    <Content Include="Items\Armor\GlassLeggings.png" />
-    <Content Include="Items\Armor\GlassLeggings_Legs.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassChestplate.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassChestplate_Arms.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassChestplate_Body.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassChestplate_FemaleBody.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassHelmet.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassHelmet_Head.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassLeggings.png" />
+    <Content Include="Items\Armor\Fuseglass\GlassLeggings_Legs.png" />
     <Content Include="Items\Tileitems\Glass_Ore.png" />
     <Content Include="Items\Tileitems\King_Tile_Plain.png" />
     <Content Include="Items\Tileitems\King_Tile_Plate.png" />
