--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Items\Armor\Fuseglass\GlassLeggings.cs" />
     <Compile Include="Items\Consumables\FuseglassBag.cs" />
     <Compile Include="Items\Consumables\RetributionPotion.cs" />
+    <Compile Include="Items\KeyItems\Cloak.cs" />
     <Compile Include="Items\Materials\LacunaBlossom.cs" />
     <Compile Include="Items\Materials\FusedBottle.cs" />
     <Compile Include="Items\Materials\FusedFossil.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Projectiles\Necro_Items\Cok.cs" />
     <Compile Include="Projectiles\Necro_Items\Necro_Boomerang_Projectile.cs" />
     <Compile Include="QuickRecipe.cs" />
+    <Compile Include="UI\Cloak\CloakUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -119,6 +121,8 @@
     <Content Include="Dusts\Glass_Dust.png" />
     <Content Include="Dusts\Necro_Dust.png" />
     <Content Include="icon.png" />
+    <Content Include="Items\Accessories\EnchantedThorn.png" />
+    <Content Include="Items\Accessories\GlassShell.png" />
     <Content Include="Items\Armor\Fuseglass\GlassChestplate.png" />
     <Content Include="Items\Armor\Fuseglass\GlassChestplate_Arms.png" />
     <Content Include="Items\Armor\Fuseglass\GlassChestplate_Body.png" />
@@ -127,6 +131,7 @@
     <Content Include="Items\Armor\Fuseglass\GlassHelmet_Head.png" />
     <Content Include="Items\Armor\Fuseglass\GlassLeggings.png" />
     <Content Include="Items\Armor\Fuseglass\GlassLeggings_Legs.png" />
+    <Content Include="Items\KeyItems\Cloak.png" />
     <Content Include="Items\Tileitems\Glass_Ore.png" />
     <Content Include="Items\Tileitems\King_Tile_Plain.png" />
     <Content Include="Items\Tileitems\King_Tile_Plate.png" />
