--- a/LacunaMod.csproj
+++ b/LacunaMod.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Projectiles\Shock.cs" />
     <Compile Include="Projectiles\ShockHam.cs" />
     <Compile Include="QuickRecipe.cs" />
-    <Compile Include="UI\Cloak\CloakUI.cs" />
+    <Compile Include="UI\Upgrades\exampleUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -103,9 +103,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Xact\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Xact.dll</HintPath>
     </Reference>
+    <Reference Include="ReLogic">
+      <HintPath>..\..\references\ReLogic.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="Terraria">
-      <HintPath>..\..\My Games\Terraria\ModLoader\Mod Sources\PostMod\Terraria.exe</HintPath>
+    <Reference Include="Terraria, Version=1.3.5.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Terraria\Terraria.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -189,10 +193,10 @@
     <Content Include="Projectiles\Shock.png" />
     <Content Include="Projectiles\ShockHam.png" />
     <Content Include="UI\Boss_Icon\Guardian_Icon.png" />
-    <Content Include="UI\Cloak\Cloak.png" />
-    <Content Include="UI\Cloak\Cloak_1.png" />
-    <Content Include="UI\Cloak\Cloak_2.png" />
-    <Content Include="UI\Cloak\Cloak_3.png" />
+    <Content Include="UI\Upgrades\Cloak\Cloak_0.png" />
+    <Content Include="UI\Upgrades\Cloak\Cloak_1.png" />
+    <Content Include="UI\Upgrades\Cloak\Cloak_2.png" />
+    <Content Include="UI\Upgrades\Cloak\Cloak_3.png" />
     <Content Include="UI\Hero\Health_Bar_1.png" />
     <Content Include="UI\Hero\Hero_1_Head.png" />
     <Content Include="UI\Hero\Level_Text.png" />
